--- a/index.html
+++ b/index.html
@@ -1,8 +1,52 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FaceOff</title>
   </head>
   <body>
-    <input type="text" placeholder="enter a room code">
+    <input id="room_id" type="text" placeholder="enter a room id to create on/join">
+    <button id="join">
+      Join!
+    </button>
+    <p id="location">Loading... Move around a bit...</p>
+    <script>
+      const socket = new WebSocket("wss://face-off.glitch.me/");
+
+      socket.onopen = function (event) {
+        console.log("Connected to the WebSocket server");
+      };
+      
+      document.getElementById("")
+      const is_ios =
+        navigator.userAgent.match(/(iPod|iPhone|iPad)/) &&
+        navigator.userAgent.match(/AppleWebKit/);
+
+      if (is_ios) {
+        DeviceOrientationEvent.requestPermission()
+          .then((response) => {
+            if (response === "granted") {
+              window.addEventListener("deviceorientation", direction, true);
+            } else {
+              document.getElementById("location").innerHTML =
+                "Hey, you didn't give me permission :<";
+            }
+          })
+          .catch(
+            () =>
+              (document.getElementById("location").innerHTML =
+                "Your device sucks lmao")
+          );
+      } else {
+        window.addEventListener("deviceorientation", direction, true);
+      }
+      function direction(event) {
+        if (event.alpha !== null) {
+          var absolute_direction =
+            event.webkitCompassHeading || Math.abs(event.alpha - 360);
+          document.getElementById("location").innerHTML = absolute_direction;
+        }
+      }
+    </script>
   </body>
 </html>
