--- a/index.html
+++ b/index.html
@@ -55,13 +55,14 @@
         <!-- Code and stuff  -->
         <div class="flex flex-col h-1/2 w-full justify-center gap-3">
           <!-- Code -->
-          <div class="flex grid grid-cols-4 h-1/2 w-fill mx-3 gap-3 place-items-center	">
+          <div
+            class="flex grid grid-cols-4 h-1/2 w-fill mx-3 gap-3 place-items-center"
+          >
             <input
               type="text"
               maxlength="1"
               pattern="[a-zA-Z0-9]"
               class="w-full aspect-square text-7xl text-center rounded-lg font-bold uppercase bg-slate-200/50 text-slate-800"
-              oninput="this.nextElementSibling.focus()"
               data-btn="0"
             />
             <input
@@ -69,7 +70,6 @@
               maxlength="1"
               pattern="[a-zA-Z0-9]"
               class="w-full aspect-square text-7xl text-center rounded-lg font-bold uppercase bg-slate-200/50 text-slate-800"
-              oninput="this.nextElementSibling.focus()"
               data-btn="1"
             />
 
@@ -78,7 +78,6 @@
               maxlength="1"
               pattern="[a-zA-Z0-9]"
               class="w-full aspect-square text-7xl text-center rounded-lg font-bold uppercase bg-slate-200/50 text-slate-800"
-              oninput="this.nextElementSibling.focus()"
               data-btn="2"
             />
 
@@ -87,7 +86,6 @@
               maxlength="1"
               pattern="[a-zA-Z0-9]"
               class="w-full aspect-square text-7xl text-center rounded-lg font-bold uppercase bg-slate-200/50 text-slate-800"
-              oninput="document.getElementById('random_id').focus()"
               data-btn="3"
             />
           </div>
@@ -102,7 +100,7 @@
               Clear
             </button>
             <button
-              id="random_id"
+              id="submit_id"
               class="w-1/2 h-full bg-slate-200/25 rounded-lg text-3xl font-medium p-3 hover:bg-slate-200/50 transition ease-in-out duration-300"
               onclick="createRoom()"
             >
@@ -122,23 +120,79 @@
       </div>
     </div>
     <script>
+      const socket = new WebSocket("wss://face-off.glitch.me/");
+      var heading;
+      var latitude;
+      var longitude;
+      var bearing;
+
+      // Functions for initial page
       function clearid() {
-        var forms = document.querySelectorAll("[data-btn]")
-        for (let i=0;i<forms.length;i++) {
-          forms[i].value = ""
+        var forms = document.querySelectorAll("[data-btn]");
+        for (let i = 0; i < forms.length; i++) {
+          forms[i].value = "";
         }
       }
       function createRoom() {
-        const letters = "QWERTYUIOPASDFGHJKLZXCVBNM1234567890"
-        var forms = document.querySelectorAll("[data-btn]")
-        for (let i=0;i<forms.length;i++) {
-          forms[i].value = letters[Math.floor(Math.random()*letters.length)]
+        const letters = "QWERTYUIOPASDFGHJKLZXCVBNM1234567890";
+        var forms = document.querySelectorAll("[data-btn]");
+        for (let i = 0; i < forms.length; i++) {
+          forms[i].value = letters[Math.floor(Math.random() * letters.length)];
         }
+        alert("yay");
       }
-      
-      const socket = new WebSocket("wss://face-off.glitch.me/");
 
-      
+      document.querySelectorAll("[data-btn]").forEach((element) => {
+        element.addEventListener("input", function () {
+          const forms = document.querySelectorAll("[data-btn]");
+          const code = Array.from(forms)
+            .map((element) => element.value)
+            .join("");
+          if (code.length == 4) {
+            document.getElementById("submit_id").innerHTML = "Join Room";
+            document.getElementById("submit_id").disabled = false;
+          } else if (code.length > 0) {
+            document.getElementById("submit_id").innerHTML = "Join Room";
+            document.getElementById("submit_id").disabled = true;
+          }
+        });
+        element.addEventListener("keydown", function (event) {
+          if (
+            event.keyCode === 46 ||
+            event.key === "Delete" ||
+            event.keyCode === 8 ||
+            event.key === "Backspace"
+          ) {
+            event.preventDefault();
+            element.value = "";
+            element.previousElementSibling &&
+              element.previousElementSibling.focus();
+
+            const elements = document.querySelectorAll("[data-btn]");
+            var code = "";
+
+            elements.forEach((element) => {
+              code += element.value;
+            });
+            console.log(code);
+            if (code.length == 0) {
+              document.getElementById("submit_id").innerHTML = "Create Room";
+              document.getElementById("submit_id").disabled = false;
+            } else {
+              document.getElementById("submit_id").innerHTML = "Join Room";
+              document.getElementById("submit_id").disabled = true;
+            }
+          } else if (event.keyCode === 32 || event.key === "Space") {
+            event.preventDefault();
+          }
+        });
+        element.addEventListener("input", function () {
+          if (element.value) {
+            element.nextElementSibling && element.nextElementSibling.focus();
+          }
+        });
+      });
+
       socket.addEventListener("open", (event) => {
         socket.onopen = function (event) {
           console.log("Connected to the WebSocket server");
@@ -197,10 +251,6 @@
         navigator.geolocation.getCurrentPosition(coordinates, error, options);
         navigator.geolocation.watchPosition(coordinates, error, options);
 
-        var heading;
-        var latitude;
-        var longitude;
-        var bearing;
         function direction(event) {
           if (event.alpha !== null) {
             heading = event.webkitCompassHeading || Math.abs(event.alpha - 360);
